src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>IsRejected_Contact_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for update contact info approval process.</description>
        <label>Hidden IsRejected Contact Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used as hidden to check the wish family contact has signed or not in the docusign document.</description>
        <label>Hidden IsSigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Family_Aware_of_Referral__c</fullName>
        <description>This field indicate the wish Child Family aware of Referral at MAWA.</description>
        <label>Is Family Aware Of Referral?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language_Notes__c</fullName>
        <description>It will capture information about language</description>
        <label>Language Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>It will capture the known language details it may be more than one language</description>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Sign Language</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French and French Creole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tagalog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnamese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Last_Continuing_Edu_Date__c</fullName>
        <description>Completed Date for most recent training</description>
        <label>Last Continuing Edu. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date__c</fullName>
        <description>It will hold the value of contact&apos;s lead created date.</description>
        <label>Lead Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MailingAddressVerificationAttempted__c</fullName>
        <inlineHelpText>Last time USPS verification was attempted</inlineHelpText>
        <label>Mailing Address Verification Attempted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MailingAddressVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>USPS Verified</inlineHelpText>
        <label>Mailing Address Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>May_We_Contact_You_at_Work__c</fullName>
        <description>It will display the person contact you at work station information.</description>
        <label>May We Contact You At Work?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medical_Condition__c</fullName>
        <description>It will capture the medical condition of the wish child</description>
        <label>Medical Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Needs__c</fullName>
        <description>It will define that wish participant requires medical needs or not.</description>
        <label>Medical Needs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>It will hold the value of middle name.</description>
        <label>Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It indicated the record is created by manually or from mulesoft.</description>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Movie__c</fullName>
        <description>It will capture wish child favorite movie names.</description>
        <label>Movie</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Music_Singer__c</fullName>
        <description>It will capture wish child favorite music details.</description>
        <label>Music/Singer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MyWishIsTo__c</fullName>
        <description>This field will  get the value from wish child form.</description>
        <label>My Wish Is To</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <description>It will hold the value of nick name.</description>
        <label>Nickname</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Verbal__c</fullName>
        <description>Its indicating wish child&apos;s facilitating communication</description>
        <label>Non - Verbal</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Assignments__c</fullName>
        <description>It hold the number of assignments for each contact.</description>
        <label>Number Of Assignments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_wishes_active__c</fullName>
        <description>It will capture the information, number of active case related to the each contacts</description>
        <label>Number Of Active Wishes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_wishes_granted__c</fullName>
        <description>It will capture the information about, number of granted case related with each volunteer contact</description>
        <label>Number Of Wishes Granted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Update_Contact_Values__c</fullName>
        <description>This field is used to trace the old and update values for the contact record</description>
        <label>Old &amp; Update Contact Values</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Onboarding_Status__c</fullName>
        <description>It will indicate which level volunteer now.</description>
        <label>Onboarding Status</label>
        <picklist>
            <picklistValues>
                <fullName>Orientation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Background Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OtherAddressVerificationAttempted__c</fullName>
        <inlineHelpText>Last time USPS verification was attempted</inlineHelpText>
        <label>Other Address Verification Attempted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OtherAddressVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>USPS Verified</inlineHelpText>
        <label>Other Address Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <description>It will capture the extra favorites of wish child</description>
        <label>Other Favorites</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_Name__c</fullName>
        <description>This field holds the name of the Parent/Guardian Name</description>
        <label>Parent/Guardian Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Legal_Guardian__c</fullName>
        <description>This field will used to store all related contact  in the relationship object record of the wish child</description>
        <label>Hidden Parent/Legal Guardian</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Part_A_Received__c</fullName>
        <description>This field will capture the date when the status is changed Part A Sent to Eligibility Review/Qualified</description>
        <label>Diagnosis Verification Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Part_A_Sent__c</fullName>
        <description>This will capture the date when the lead status is changed from Referred to Part A Sent</description>
        <label>Diagnosis Verification Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pet_Animal__c</fullName>
        <description>It will capture the Wish Child favorite Pet Animal details</description>
        <label>Pet/Animal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>It will hold the information about designation of employee.</description>
        <label>Position</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <description>It will capture the wish child&apos;s preferred name.</description>
        <label>Preferred Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone_Types__c</fullName>
        <description>It holds the details of preferred phone types</description>
        <label>Preferred Phone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone__c</fullName>
        <description>This field is used to store the Volunteer Contact Preferred value.</description>
        <label>Preferred Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Address__c</fullName>
        <description>It will hold wish child Primary Address details</description>
        <label>Primary Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Diagnosis_Condition_Description__c</fullName>
        <description>Used to hold the Primary diagnosis condition description from lead record during conversion</description>
        <label>Primary Condition Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Skills_Other_Notes__c</fullName>
        <description>If volunteer know any extra Professional Skills, they can note it here.</description>
        <label>Professional Skills (Other Notes)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Skills__c</fullName>
        <description>It will capture the professional skills information</description>
        <label>Professional Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Construction / Carpentry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphic Design / Art Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Decorating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Certifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scrapbooking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Writing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Provided_additional_information__c</fullName>
        <description>Used to hold additional information provided by medical professional</description>
        <label>Provided additional information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <description>Provider types for medical professional contacts</description>
        <label>Provider Type</label>
        <picklist>
            <picklistValues>
                <fullName>Social Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Life Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Publicity_Candidate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify whether wish child is publicity child or not if yes we can use this child for future events</description>
        <inlineHelpText>Check this box if you feel the wish child would be a good publicity candidate.</inlineHelpText>
        <label>Publicity Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publicity_Notes__c</fullName>
        <description>This field contains the Notes of the wish kid for going public.</description>
        <label>Publicity Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publicity_OK__c</fullName>
        <description>This field is used to determine whether the Wish Child wants to go public or not.</description>
        <inlineHelpText>Publicity applies to all participants of the wish associated with this Wish Child</inlineHelpText>
        <label>Publicity OK</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RE_About_Me__c</fullName>
        <description>DESCRIPTION</description>
        <label>RE About Me</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Account_Name__c</fullName>
        <description>ORG_NAME</description>
        <label>RE Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Account_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Account Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Alternate_Email__c</fullName>
        <description>NUM</description>
        <label>RE Alternate Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Alternate_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Alternate Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Birthdate__c</fullName>
        <description>BIRTH_DATE</description>
        <label>RE Birthdate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Business_Fax__c</fullName>
        <description>NUM</description>
        <label>RE Business Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Business_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Business Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_City_Employer__c</fullName>
        <description>CITY</description>
        <label>RE City Employer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_City_Referrer__c</fullName>
        <description>CITY</description>
        <label>RE City Referrer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Country__c</fullName>
        <description>COUNTRY</description>
        <label>RE Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_County__c</fullName>
        <description>COUNTY</description>
        <label>RE County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Deceased_Date__c</fullName>
        <description>DECEASED_DATE</description>
        <label>RE Deceased Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Deceased__c</fullName>
        <description>DECEASED</description>
        <label>RE Deceased</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Diagnosis_Verification_Received__c</fullName>
        <description>QUALIFIED</description>
        <label>RE Diagnosis Verification Received</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Do_Not_Contact_Notes__c</fullName>
        <description>SOLICIT_CODE</description>
        <label>RE Do Not Contact Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Do_Not_Contact__c</fullName>
        <description>SOLICIT_CODE</description>
        <label>RE Do Not Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Email_Opt_Out__c</fullName>
        <description>INACTIVE, DO_NOT_CALL
|NO_EMAIL</description>
        <label>RE Email Opt Out</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Email__c</fullName>
        <description>NUM</description>
        <label>RE Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Emergency_Contact_Phone__c</fullName>
        <description>EMERGENCY_PHONE</description>
        <label>RE Emergency Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Emergency_Contact_Relationship__c</fullName>
        <description>EMERGENCY_RELATION</description>
        <label>RE Emergency Contact Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Emergency_Contact__c</fullName>
        <description>EMERGENCY_NAME</description>
        <label>RE Emergency Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Employer__c</fullName>
        <description>ORG_NAME</description>
        <label>RE Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_First_Name__c</fullName>
        <description>FIRST_NAME</description>
        <label>RE First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Gender__c</fullName>
        <description>SEX</description>
        <label>RE Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Home_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Home Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_ICD_Code__c</fullName>
        <description>ICD_CODE</description>
        <label>RE ICD Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_I_m_on_LinkedIn__c</fullName>
        <description>NUM</description>
        <label>RE Iâ€™m on LinkedIn</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Import_Id__c</fullName>
        <description>&quot;MAWWISHDATAID, IMPORTID
|ID, IMPORT_ID&quot;</description>
        <label>RE Import Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Language_Notes__c</fullName>
        <description>&quot;PRIMARY_LANGUAGE
|DESCRIPTION &amp; SKILL_LEVEL&quot;</description>
        <label>RE Language Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Language__c</fullName>
        <description>&quot;PRIMARY_LANGUAGE
|DESCRIPTION &amp; SKILL_LEVEL&quot;</description>
        <label>RE Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Last_Name__c</fullName>
        <description>LAST_NAME</description>
        <label>RE Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Lead_Created_Date__c</fullName>
        <description>DATEADDED</description>
        <label>RE Lead Created Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mailing_City1__c</fullName>
        <description>CITY</description>
        <label>RE Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mailing_City2__c</fullName>
        <description>CITY</description>
        <label>RE Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mailing_City__c</fullName>
        <description>CITY</description>
        <label>RE Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mailing_Country__c</fullName>
        <description>COUNTRY</description>
        <label>RE Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mailing_State1__c</fullName>
        <label>RE Mailing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mailing_State__c</fullName>
        <description>STATE</description>
        <label>RE Mailing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mailing_Street1__c</fullName>
        <description>ADDRESS_BLOCK</description>
        <label>RE Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mailing_Street2__c</fullName>
        <description>ADDRESS_BLOCK</description>
        <label>RE Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mailing_Street__c</fullName>
        <description>RE Mailing Street</description>
        <label>RE Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mailing_ZIP__c</fullName>
        <description>ZIP</description>
        <label>RE Mailing ZIP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mailing_Zip1__c</fullName>
        <description>POST_CODE</description>
        <label>RE Mailing Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mailing_Zip2__c</fullName>
        <description>ZIP</description>
        <label>RE Mailing Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Middle_Name__c</fullName>
        <description>MIDDLE_NAME</description>
        <label>RE Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Mobile_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Mobile Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Non_Verbal__c</fullName>
        <description>PRIMARY_LANGUAGE</description>
        <label>RE Non - Verbal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Other_Address__c</fullName>
        <description>ADDRESS_BLOCK</description>
        <label>RE Other Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Other_City__c</fullName>
        <description>CITY</description>
        <label>RE Other City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Other_Country__c</fullName>
        <description>COUNTRY</description>
        <label>RE Other Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Other_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Other Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Other_State_Province__c</fullName>
        <description>STATE</description>
        <label>RE Other State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Other_Street__c</fullName>
        <description>ADDRESS_BLOCK</description>
        <label>RE Other Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Other_Zip_Postal_Code__c</fullName>
        <description>POST_CODE</description>
        <label>RE Other Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Personal_Email__c</fullName>
        <description>NUM</description>
        <label>RE Personal Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Position1__c</fullName>
        <description>POSITION</description>
        <label>RE Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Position__c</fullName>
        <description>POSITION</description>
        <label>RE Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Preferred_Name__c</fullName>
        <description>NICKNAME</description>
        <label>RE Preferred Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Preferred_Phone_Types_c__c</fullName>
        <description>PHONE_TYPE_ID</description>
        <label>RE Preferred_Phone_Types__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Preferred_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Preferred Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Primary_Address__c</fullName>
        <description>ADDRESS_BLOCK</description>
        <label>RE Primary Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Professional_Skills_Other_Notes__c</fullName>
        <description>&quot;DESCRIPTION
COMMENTS&quot;</description>
        <label>RE Professional Skills (Other Notes)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Professional_Skills__c</fullName>
        <description>DESCRIPTION</description>
        <label>RE Professional Skills</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Provider_Type__c</fullName>
        <description>RECIP_RELATION_CODE</description>
        <label>RE Provider Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Publicity_OK__c</fullName>
        <description>PR_OK</description>
        <label>RE Publicity OK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Race_Ethnicity_Details__c</fullName>
        <description>ETHNICITY</description>
        <label>RE Race/Ethnicity Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Race_Ethnicity__c</fullName>
        <description>ETHNICITY</description>
        <label>RE Race/Ethnicity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Record_Id__c</fullName>
        <description>&quot;MAWWISHDATAID, IMPORTID 
|ID, IMPORT_ID&quot;</description>
        <externalId>true</externalId>
        <label>RE_Record_Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RE_Referrer_City__c</fullName>
        <description>RE Referrer City</description>
        <label>RE Referrer City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Referrer_Email__c</fullName>
        <description>RE Referrer Email</description>
        <label>RE Referrer Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Referrer_First_Name__c</fullName>
        <description>RE Referrer FirstName</description>
        <label>RE Referrer First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Referrer_Last_Name__c</fullName>
        <description>RE_Referrer Last Name</description>
        <label>RE Referrer Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Referrer_Phone__c</fullName>
        <description>RE Referrer Phone</description>
        <label>RE Referrer Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Referrer_Zip__c</fullName>
        <description>RE Referrer Zip</description>
        <label>RE Referrer Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Region_Chapter__c</fullName>
        <description>Chapter migrating from</description>
        <label>RE Region Chapter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Region__c</fullName>
        <description>REGION</description>
        <label>RE Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Second_Recipient_Name__c</fullName>
        <description>FIRST_NAME</description>
        <label>RE Second Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Social_Media_Link__c</fullName>
        <description>NUM</description>
        <label>RE Social Media Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>